--- a/www/index.html
+++ b/www/index.html
@@ -53,6 +53,11 @@
           
           <h4 style="margin-top: 5px; margin-bottom: 8px;">News</h4>
           
+          <p style="margin-top: 0px; margin-bottom: 5px;"><b><i>February 15th, 2008:</i></b> VisualVM sources is avilable in 
+          <a href="https://visualvm.dev.java.net/source/browse/visualvm/">CVS</a>. Keep in mind that VisualVM experimental API is still under active development. 
+          Simple version of build istructions is available <a href="build.html">here</a>.
+          </p>
+
           <p style="margin-top: 0px; margin-bottom: 5px;"><b><i>February 7th, 2008:</i></b> VisualVM Milestone 2 released. For this release an experimental API has been defined to
           allow smooth integration of third-party plugins into VisualVM UI and workflow. This API and the source code will be published soon. The other news in
           Milestone 2: separate threads view for each application, support for coredumps on Linux and Solaris (overview, take thread & heap dump), merged several
