html formatting fixed
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@141 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/build.html
+++ b/www/build.html
@@ -3,6 +3,7 @@
 <title>Build guide for VisualVM </title>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 </head>
+<body>
 <p>
 This document describes VisualVM CVS layout and shourt instructions how to build VisualVM. 
 There are two suites - one visualvm, which is the core tool and the plugins suite, 
@@ -23,5 +24,5 @@ To build visualvm core tool you need NetBeans platform and profiler binaries ava
 To build plugins suite, use <code>ant build</code> or <code>ant run</code>. This will automatically build zip distribution of core tool to visualvm/visualvm/dist/visualvm.zip and extract it to visualvm/plugins/visualvm directory. After that build of plugins suite continue as usually. 
 </p>
 
-<body>
+</body>
 
