--- a/www/index.html
+++ b/www/index.html
@@ -53,9 +53,9 @@
           
           <h4 style="margin-top: 5px; margin-bottom: 8px;">News</h4>
           
-          <p style="margin-top: 0px; margin-bottom: 5px;"><b><i>February 15th, 2008:</i></b> VisualVM sources is avilable in 
-          <a href="https://visualvm.dev.java.net/source/browse/visualvm/">CVS</a>. Keep in mind that VisualVM experimental API is still under active development. 
-          Simple version of build istructions is available <a href="build.html">here</a>.
+          <p style="margin-top: 0px; margin-bottom: 5px;"><b><i>February 15th, 2008:</i></b> VisualVM sources are available in 
+          <a href="https://visualvm.dev.java.net/source/browse/visualvm/">CVS</a>. Keep in mind that the VisualVM experimental
+          API is still under active development. A simple version of the build instructions is available <a href="build.html">here</a>.
           </p>
 
           <p style="margin-top: 0px; margin-bottom: 5px;"><b><i>February 7th, 2008:</i></b> VisualVM Milestone 2 released. For this release an experimental API has been defined to
