--- a/www/build.html
+++ b/www/build.html
@@ -16,9 +16,9 @@
 <ul>
     <li>visualvm
         <ul>
-            <li>www&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&lt;--- web pages</li>
-            <li>visualvm&nbsp&nbsp&lt;--- core tool suite</li>
-            <li>plugins&nbsp&nbsp&nbsp&nbsp&lt;--- for plugin center (jconsole, mbeans, glassfish)</li>
+            <li>www&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&lt;--- web pages</li>
+            <li>visualvm&nbsp;&nbsp;&lt;--- core tool suite</li>
+            <li>plugins&nbsp;&nbsp;&nbsp;&nbsp;&lt;--- for plugin center (jconsole, mbeans, glassfish)</li>
         </ul>
     </li>
 </ul>
