--- a/www/index.html
+++ b/www/index.html
@@ -127,6 +127,7 @@
               <ul style="margin-top: 3px; padding-top: 3px; margin-left: 10px; padding-left: 10px; margin-bottom: 2px; padding-bottom: 2px;">
                         <li><a href="https://visualvm.dev.java.net/description.html">Introduction to VisualVM</a></li>
                         <li><a href="https://visualvm.dev.java.net/troubleshooting.html">Troubleshooting Guide</a></li>
+                        <li><a href="https://visualvm.dev.java.net/build.html">Build Guide</a></li>
                         <li><a href="http://weblogs.java.net/blog/mandychung/archive/VisualVM-BOF-2007.pdf">BOF-9123, JavaOne 2007</a></li>
                       </ul>
           </div>
