--- a/www/api-quickstart.html
+++ b/www/api-quickstart.html
@@ -13,7 +13,7 @@
         
         <p>In this tutorial you will be
         introduced to the VisualVM APIs and you will be shown how to get
-        started using it
+        started using them
         to extend VisualVM. Entry points into VisualVM fall into the
         following categories, each implemented by the factory pattern:
         
