--- a/www/api-quickstart.html
+++ b/www/api-quickstart.html
@@ -20,7 +20,8 @@
         you want to make available to VisualVM. For example, maybe you have
         a tool that shows an application's threads or processing speed in a
         new and interesting way. In this case, you would create a plugin
-        that makes your tool available to VisualVM so that its users can
+        that makes your tool available to VisualVM via new tabs and menu
+        items, so that its users can
         benefit from the feature set provided by your tool. Secondly, you
         have an application with specific monitoring/management needs. For
         example, if your application is a deployment server, you might want to 
