--- a/www/api-quickstart.html
+++ b/www/api-quickstart.html
@@ -335,7 +335,8 @@ and you'll see your new tab, for all application types:
                     <li><b><a href="http://blogs.sun.com/geertjan/entry/getting_started_extending_visualvm"> Getting Started Extending VisualVM (Part 1)</a>.</b>
                     Here you create your first tab extension. You discover that VisualVM
                     tabs are broken down into master views, master view configurations,
-                    and detail views.
+                    and detail views. That blog entry is reproduced in the "Hello World"
+                    section of this tutorial.
                     <li><b><a href="http://blogs.sun.com/geertjan/entry/getting_started_extending_visualvm_part">Getting Started Extending VisualVM (Part 2)</a>.</b>
                     Here you create an application type extension, with an overview
                     extension and menu extension specifically for the application type.
