--- a/www/api-quickstart.html
+++ b/www/api-quickstart.html
@@ -290,7 +290,7 @@ import javax.management.MBeanServerConnection;</pre>
 This will install the plugin in a new instance of VisualVM
 and you'll see your new tab, for all application types:
 
-<p><img src="http://blogs.sun.com/geertjan/resource/extend-visualvm-7.png" border="1"/>
+<p><p><img src="http://blogs.sun.com/geertjan/resource/extend-visualvm-7.png" border="1"/>
 
 </ol>
         <p>Congratulations you have completed the Hello World scenario!
