--- a/www/api-quickstart.html
+++ b/www/api-quickstart.html
@@ -130,12 +130,16 @@
 some placeholders for content. 
 
 <ol>
-<p><li>Create a new NetBeans module and make sure to specify that 
+<p><li>In NetBeans IDE, choose File &gt; New Project and then
+ choose NetBeans Modules &gt; Module. Click Next. Create a new NetBeans module and make 
+ sure to specify that 
 you want to build against the VisualVM binary that you registered earlier:
 
 <p><p><img src="http://blogs.sun.com/geertjan/resource/extend-visualvm-4.png" border="1"/>
 
-<p><li>Use the "Module Installer" wizard, which will create a class that is called
+<p>Click Next and fill out the next step in way you like. Click Finish.
+
+<p><li>Use the "Module Installer" wizard, which will create the class that is called
 when the plugin is installed into VisualVM. Here's where you'll find the wizard 
 in the New File dialog:
 
