--- a/www/api-quickstart.html
+++ b/www/api-quickstart.html
@@ -158,6 +158,10 @@ public void uninstalled() {
     HelloWorldViewProvider.unregister();
 }</pre>
 
+<p>As you can see, we will define the above two methods in a class called "HelloWorldViewProvider",
+which we will define later. Therefore you can ignore the red error lines, because you
+will create the methods later.
+
 <p><li>Now add a dependency on "VisualVM-Core", which provides the APIs into the VisualVM.
 Do this by right-clicking the project node, choosing "Properties", and then setting
 the dependency in the "Libraries" tab.
