--- a/www/api-quickstart.html
+++ b/www/api-quickstart.html
@@ -41,12 +41,12 @@
             with labels such as "Overview", "Monitor", and "Threads". You can
             create new tabs just like these. Your tabs can either be available
             to all application types or to specific application types.
-            <li><b>Subtab extension.</b> By default, the application
-            types all share an "Overview" tab, a "Monitor" tab, and a
-            "Threads" tab. For example, the "Overview" tab lists JVM arguments and
-            other high level application-specific information. You can provide
-            new subtabs within these three tab, which can either be
-            available to all appllication types or to specific application
+            <li><b>Subtab extension.</b> Within the three existing tabs
+            listed above, you can provide
+            new subtabs. You can also specify the new subtab's 
+            position within the tab.
+            Subtabs can either be
+            available to all application types or to specific application
             types.
             <li><b>Menu extension.</b> An application type, and its subnodes,
             can have one or more menu items added to their contextual menus.
