--- a/www/api-quickstart.html
+++ b/www/api-quickstart.html
@@ -338,6 +338,10 @@ and you'll see your new tab, for all application types:
                     <li><b><a href="http://blogs.sun.com/geertjan/entry/getting_started_extending_visualvm_part1">Getting Started Extending VisualVM (Part 3)</a>.</b>
                     Here you are introduced to application type subnodes and you
                     are referred to the GlassFish plugin for related source code.
+                    <li><b><a href="http://blogs.sun.com/geertjan/entry/getting_started_extending_visualvm_part2">Getting Started Extending VisualVM (Part 4)</a>.</b>
+                    Here the extendability of the "Overview" tab, "Monitor" tab, and "Threads" tab
+                    are highlighted. In addition, you are shown how to make your own tabs
+                    extendable.
                 </ul>    
             </li>
             
