--- a/www/api-quickstart.html
+++ b/www/api-quickstart.html
@@ -74,9 +74,8 @@
             <li>Tabs
             <br><tt>com.sun.tools.visualvm.core.ui.DataSourceViewsProvider
             <br>/com.sun.tools.visualvm.core.ui.DataSourceView</tt>
-            <p>To make your tabs extendable, the following APIs are needed:
-            <br><tt>com.sun.tools.visualvm.core.ui.PluggableViewSupport
-            <br>/com.sun.tools.visualvm.core.ui.PluggableViewSupport</tt>
+            <p>To make your tabs extendable, the following API is needed:
+            <br><tt>com.sun.tools.visualvm.core.ui.PluggableViewSupport</tt>
             <li>Subtabs
             <br><tt>com.sun.tools.visualvm.core.ui.ViewPlugin
             <br>/com.sun.tools.visualvm.core.ui.ViewPlugin.ViewDescriptor</tt>
