--- a/www/api-quickstart.html
+++ b/www/api-quickstart.html
@@ -37,7 +37,7 @@
             <tbody><tr>
                     <td align="left" valign="top">
                         <ul>
-                            <li><a href="#installing">Introduction</a>
+                            <li><a href="#overvuew">Overview</a>
                             <li><a href="#preparing">Preparing to Extend VisualVM</a></li>
                             <li><a href="#hello">Hello World</a></li>
                             <li><a href="#further">Further Reading</a></li>
@@ -46,7 +46,7 @@
                 </tr>
         </tbody></table>
         
-        <h2 class="tutorial"><a name="introduction"></a>Introduction</h2>
+        <h2 class="tutorial"><a name="overview"></a>Overview</h2>
         
         <p>Entry points into VisualVM fall into the
         following categories, each implemented by the factory pattern:
