--- a/www/api-quickstart.html
+++ b/www/api-quickstart.html
@@ -37,7 +37,7 @@
             <tbody><tr>
                     <td align="left" valign="top">
                         <ul>
-                            <li><a href="#understanding">Understanding the VisualVM APIs</a>
+                            <li><a href="#entry">Introducing the VisualVM Entry Points</a>
                             <li><a href="#preparing">Preparing to Extend VisualVM</a></li>
                             <li><a href="#hello">Creating a "Hello World" Plugin</a></li>
                             <li><a href="#further">Further Reading</a></li>
@@ -46,7 +46,7 @@
                 </tr>
         </tbody></table>
         
-        <h2 class="tutorial"><a name="understanding"></a>Understanding the VisualVM APIs</h2>
+        <h2 class="tutorial"><a name="entry"></a>Introducing the VisualVM Entry Points</h2>
         
         <p>Entry points into VisualVM fall into the
         following categories, each implemented by the factory pattern:
