--- a/www/api-quickstart.html
+++ b/www/api-quickstart.html
@@ -69,7 +69,7 @@
             can have one or more menu items added to their contextual menus.
             <li><b>Application type extension.</b> Not only can you extend
             existing application types, as described above, but you can also
-            create an entire new application type. You can do this to do 
+            register new application types. You can do this to do 
             something as simple as provide a distinguishing icon for a
             running instance of your application. Alternatively, you might
             want to provide a lot of functionality, including graphs, to show
