--- a/www/api-quickstart.html
+++ b/www/api-quickstart.html
@@ -432,12 +432,12 @@ public void uninstalled() {
                         identify the deployed application. There is also a default 
                         application type so that all applications are recognized in
                     one way or another.</td>
-                    <td class="ct"><ul><li><a href="api-faq.html#what-apptype">What is an application type?</a></ul></td>
-                    <td class="ct"><ul><li><a href="api-faq.html#default-apptype">What are the default application types?</a></ul></td>
-                    <td class="ct"><ul><li><a href="api-faq.html#why-create-apptype">Why would I create my own application types?</a></ul></td>
-                    <td class="ct"><ul><li><a href="api-faq.html#how-create-apptype">How do I create my own application types?</a></ul></td>
-                    <td class="ct"><ul><li><a href="api-faq.html#how-create-subnodes">How do I add subnodes to my application type?</a></ul></td>
-                    <td class="ct"><ul><li><a href="api-faq.html#how-add-menu-items">How do I add contextual menu items to my application type?</a></ul></td>
+                    <td class="ct"><ul><li><a href="api-faq.html#what-apptype">What is an application type?</a>
+                    <li><a href="api-faq.html#default-apptype">What are the default application types?</a>
+                    <li><a href="api-faq.html#why-create-apptype">Why would I create my own application types?</a>
+                    <li><a href="api-faq.html#how-create-apptype">How do I create my own application types?</a>
+                    <li><a href="api-faq.html#how-create-subnodes">How do I add subnodes to my application type?</a>
+                    <li><a href="api-faq.html#how-add-menu-items">How do I add contextual menu items to my application type?</a></ul></td>
                 </tr>
                 <tr>
                     <td class="ct">com.sun.tools.visualvm.core.model.dsdescr</td>
