info about data sources
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@350 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/api-quickstart.html
+++ b/www/api-quickstart.html
@@ -138,8 +138,8 @@
             <br><tt>com.sun.tools.visualvm.core.datasource.DefaultDataSourceProvider
             <br>/com.sun.tools.visualvm.core.datasource.AbstractDataSource</tt>
             <br>You also need to extend the following:
-            <tt>com.sun.tools.visualvm.core.model.dsdescr.DataSourceDescriptor</tt>
-            <tt>com.sun.tools.visualvm.core.model.AbstractModelProvider</tt>
+            <br><tt>com.sun.tools.visualvm.core.model.dsdescr.DataSourceDescriptor</tt>
+            <br><tt>com.sun.tools.visualvm.core.model.AbstractModelProvider</tt>
             
         </ul>    
         
