fixing the introduction
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@352 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/api-quickstart.html
+++ b/www/api-quickstart.html
@@ -31,8 +31,10 @@
         <p>In this tutorial you will be
         introduced to the VisualVM APIs and you will be shown how to get
         started using them
-        to extend VisualVM. In general, there are two types of use cases
-        that apply to VisualVM extensions:
+        to extend VisualVM. 
+        
+        <p>In general, there are two reasons
+        why you would want to extend VisualV:
         
         <ul>
         <p><li><b>Tool-Centric.</b> In this scenario, you have a monitoring
