fixing the introduction
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@353 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/api-quickstart.html
+++ b/www/api-quickstart.html
@@ -33,8 +33,8 @@
         started using them
         to extend VisualVM. 
         
-        <p>In general, there are two reasons
-        why you would want to extend VisualV:
+        <p>In general, there are two types of reasons
+        why you would want to extend VisualVM:
         
         <ul>
         <p><li><b>Tool-Centric.</b> In this scenario, you have a monitoring
