faq first draft
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@355 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/api-quickstart.html
+++ b/www/api-quickstart.html
@@ -139,7 +139,7 @@
             <br><tt>com.sun.tools.visualvm.core.explorer.ExplorerActionsProvider
             <br>/javax.swing.AbstractAction</tt>
             <li>Application Types
-            <br><tt>com.sun.tools.visualvm.core.model.apptype.ApplicationTypeFactory
+            <br><tt>com.sun.tools.visualvm.core.model.apptype.MainClassApplicationTypeFactory
             <br>/com.sun.tools.visualvm.core.model.apptype.ApplicationType</tt>
             <li>Data Sources
             <br><tt>com.sun.tools.visualvm.core.datasource.DefaultDataSourceProvider
